[package]
name = "boosting"
version = "0.1.0"
authors = ["rickyota <22293266+rickyota@users.noreply.github.com>"]
description = "Boosting methods for polygenic score"
edition = "2021"

[features]
default = ["plink2"]
plink2 = ["genetics/plink2"]


[dependencies]
genetics = { path = "../genetics", default-features = false }
cmatrix = { path = "../cmatrix" }
#mysmartcore={ path="../../lib/mysmartcore"}
clap = { version = "4.3.4", features = ["derive"] }
rayon = "1.5"
#rustc-test="0.3"
#smartcore="0.2.0"
log = "0.4"
env_logger = "0.9"
crossbeam = "0.8"
#"numpy"="0.17.2"
assert_float_eq = "1"
#itertools = "0.11.0"
#rand = "0.8.5"
indoc = "2"
csv = "1.1"

##[dependencies.pyo3]
##version="0.17.3"
## comment for static link
##features=["auto-initialize"]

[dev-dependencies]
criterion = "0.3"

# this runs both default bench and criterion
# for criterion benches/loss_criterion
[[bench]]
name = "loss_criterion"
harness = false

#[[bench]]
#name = "set_count_criterion"
#harness = false
