[package]
name = "genetics"
version = "0.1.0"
authors = ["rickyota <22293266+rickyota@users.noreply.github.com>"]
description = "General Genetics Crate"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cmatrix={package="cmatrix", path="../cmatrix_rust"}
cmatrix={path="../cmatrix_rust"}
mysmartcore={ path="../../lib/mysmartcore"}
maligned="0"
sysinfo="0"
clap="2"
rayon="1.5"
#crossbeam="0.8"
ndarray = "0.15"
#linfa = "0.6.1"
#linfa-logistic = "0.6.1"
#smartcore="0.3.2"
#smartcore="0.2.0"
#rand="0.8"
log="0.4"
env_logger="0.9"
#numpy="0.17.2"
assert_float_eq = "1"
#argmin="0.4"
#nalgebra="0.31.4"


#[dependencies.pyo3]
#version="0.17.3"
## comment for static link
##features=["auto-initialize"]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "set_count"
harness = false

[[bench]]
name = "set_bed"
harness = false

[[bench]]
name = "pred_to_count"
harness = false

[[bench]]
name = "load_plink"
harness = false


[[bench]]
name = "load_plink_use_samples"
harness = false
