[package]
name = "test_pyo3_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray="0.15.6"
numpy="0.17.2"

[dependencies.pyo3]
version="0.17.3"
# for static link
#features=["auto-initialize"]


