[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon="1.5"
log="0.4"
env_logger="0.9"
sysinfo="0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "vec_new"
harness = false


